--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
 
 /* Your CSS Code here. */
+table,th,td,tr{
+	border:1px solid black;
+	border-collapse:collapse;
+	padding:2px;
+}
+table{
+	width:100%;
+}
+td{
+	text-align:end;
+	font-weight:bold;
+}
+th{
+	text-align:start;
+}
+thead{
+	background-color:saddlebrown
+}
+.one{
+	background-color:rosybrown;
+}
