--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ th{
 	text-align:start;
 }
 thead{
-	background-color:saddlebrown
+	background-color:saddlebrown;
 }
 .one{
 	background-color:rosybrown;
